--- a/index.html
+++ b/index.html
@@ -256,6 +256,11 @@
                             <dd>Utilities NPM package (like lodash) <a
                                     href="https://github.com/kissarat/auxiliary">https://www.npmjs.com/package/auxiliary</a>
                             </dd>
+                            <dt class="notranslate">Comparator Generator</dt>
+                            <dd>Generates anoymous function that compare equality of two objects
+                                based on JSON description. You can see generator and example of descrition
+                                <a href="comparator/index.html" class="anchor">here</a>
+                            </dd>
                             <dt class="notranslate">Never Loose</dt>
                             <dd>Google Chrome extension
                                 (<a
@@ -275,7 +280,8 @@
                             </dd>
                             <dt class="notranslate">Code Commenter</dt>
                             <dd>Web application for commenting of lines of Python code with own syntax highlighter
-                                <a href="https://github.com/kissarat/coco">https://github.com/kissarat/coco</a></dd>
+                                <a href="https://github.com/kissarat/coco">https://github.com/kissarat/coco</a>
+                            </dd>
                         </dl>
                     </dd>
                 </dl>
