+ comparison schema description

--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
                             </dd>
                             <dt class="notranslate">Comparator Generator</dt>
                             <dd>Generates anoymous function that compare equality of two objects
-                                based on JSON description. You can see generator and example of descrition
+                                based on JSON description. You can see generator and example of
+                                comparison schema description
                                 <a href="comparator/index.html" class="anchor">here</a>
                             </dd>
                             <dt class="notranslate">Never Loose</dt>
