--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
                                     class="notranslate">Terraform</a></li>
                             <li><a href="https://en.wikipedia.org/wiki/Jenkins_(software)"
                                     class="notranslate">Jenkins</a></li>
+                            <li>
+                                <a class="notranslate" href="https://redux-saga.js.org/">Redux Saga</a>
+                            </li>
                         </ul>
                     </dd>
                     <dt class="experience">Experience</dt>
