--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <dd id="experience" class="robots-noindex" v-cloak>
                         <div class="cloak">
                             <span class="please">Something wrong happens. Please</span>
-                            <a class="download" href="https://kissarat.github.io/taras-labiak-resume.pdf">download</a>
+                            <a class="download" href="https://grabify.link/TB2PKD">download</a>
                             <span class="pdf">resume in PDF format</span>
                         </div>
                         <div v-if="original">
@@ -232,7 +232,7 @@
                             <span class="can-see">You can see this section at</span>
                             <a href="https://kissarat.github.io/">kissarat.github.io</a>
                             <span class="or">or</span>
-                            <a class="download" href="https://kissarat.github.io/taras-labiak-resume.pdf">download</a>
+                            <a class="download" href="https://grabify.link/TB2PKD">download</a>
                             <span class="pdf">resume in PDF format</span>
                         </div>
                     </dd>
@@ -292,7 +292,7 @@
             </article>
         </div>
         <iframe src="https://en.wikipedia.org/wiki/Ethereum"></iframe>
-        <a id="pdf" href="https://grabify.link/1ZPCN8" title="Save as PDF" target="_blank">
+        <a id="pdf" href="https://grabify.link/TB2PKD" class="download" title="Save as PDF" target="_blank">
             <img alt="Save as PDF" src="images/pdf.png" />
         </a>
     </div>
