--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.21/vue.min.js"
         integrity="sha256-ui3vFTgbIIvd9ePh+wF+ju05O3jympV4FyFlpNMV2cw=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <!--div id="hired" style="opacity: 0; display: none">
+    <div id="hired" style="opacity: 0; display: none">
         <h1>I am hired</h1>
         <button type="button">OK</button>
-    </div-->
+    </div>
 </body>
 
 </html>
