--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="PHP, Node.js, Python and Go Full Stack Developer" />
     <title>Taras Labiak - Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="resume/style.css" />
 </head>
 
 <body>
@@ -65,9 +65,9 @@
     <div id="app" itemscope itemtype="https://schema.org/Person">
         <div id="resume">
             <header v-bind:class="{large}">
-                <a v-bind:href="large ? 'avatar.jpg' : ''" v-on:click="$event.preventDefault()">
-                    <img alt="Taras Labiak" itemprop="image" id="avatar" src="avatar.jpg" v-bind:class="{large: large}"
-                        v-on:click="large = !large" />
+                <a v-bind:href="large ? 'resume/avatar.jpg' : ''" v-on:click="$event.preventDefault()">
+                    <img alt="Taras Labiak" itemprop="image" id="avatar" src="resume/avatar.jpg"
+                        v-bind:class="{large: large}" v-on:click="large = !large" />
                 </a>
                 <div>
                     <h1>
@@ -304,7 +304,7 @@
         integrity="sha256-VBLiveTKyUZMEzJd6z2mhfxIqz3ZATCuVMawPZGzIfA=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.21/vue.min.js"
         integrity="sha256-ui3vFTgbIIvd9ePh+wF+ju05O3jympV4FyFlpNMV2cw=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="resume/script.js"></script>
     <div id="hired" style="opacity: 0; display: none">
         <h1>I am hired</h1>
         <button type="button">OK</button>
