+ resume/hired.js

--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.21/vue.min.js"
         integrity="sha256-ui3vFTgbIIvd9ePh+wF+ju05O3jympV4FyFlpNMV2cw=" crossorigin="anonymous"></script>
     <script src="resume/script.js"></script>
+    <script src="resume/hired.js"></script>
     <div id="hired" style="opacity: 0; display: none">
         <h1>I am hired</h1>
         <button type="button">OK</button>
