--- a/samples/animation-frequency.html
+++ b/samples/animation-frequency.html
@@ -5,6 +5,19 @@
     <title>Animation Frequency</title>
     <style>
         body {
+            margin: 0;
+            padding: 0;
+        }
+
+        article {
+            position: fixed;
+            display: flex;
+            justify-content: center;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            flex-direction: column;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -20,6 +33,23 @@
         section {
             font-size: 48pt;
         }
+
+        body>div {
+            display: flex;
+            align-items: center;
+            margin-top: 1px;
+            opacity: 0.3;
+        }
+
+        body>div>div {
+            display: inline-block;
+        }
+
+        .rectange {
+            background-color: black;
+            height: 16px;
+            margin-right: 6px;
+        }
     </style>
 </head>
 
@@ -32,20 +62,33 @@
         let number = 0;
         let last = 0;
         const delta = 1000;
+        let stamps = [];
         const element = document.querySelector('section');
         function count() {
-            const now = Date.now();
-            const second = Math.floor(now / delta);
             number++;
-            if (second > last) {
-                element.innerHTML = number;
-                number = 0;
-            } else {
-                number++;
-            }
-            last = second;
             requestAnimationFrame(count);
         }
+
+        setInterval(function () {
+            if (last % 3 === 0) {
+                const div = document.createElement('div');
+                const rectange = document.createElement('div');
+                rectange.classList.add('rectange')
+                const average = stamps.length > 0 ? stamps.reduce((sum, n) => sum + n, 0) / stamps.length : 0;
+                rectange.style.width = Math.floor(average * 2) + 'px';
+                const value = document.createElement('div');
+                value.innerHTML = average;
+                div.appendChild(rectange);
+                div.appendChild(value);
+                document.body.insertBefore(div, document.body.firstElementChild)
+                stamps = [];
+            } else {
+                stamps.push(number);
+            }
+            element.innerHTML = number;
+            number = 0;
+            last = Math.floor(10 * Math.floor(Date.now() / delta)) / 10;
+        }, delta);
 
         requestAnimationFrame(count);
     </script>
