--- a/samples/animation-frequency.html
+++ b/samples/animation-frequency.html
@@ -8,6 +8,8 @@
         body {
             margin: 0;
             padding: 0;
+            color: white;
+            background-color: black;
         }
 
         article {
@@ -31,8 +33,12 @@
             text-align: center;
         }
 
+        h1 {
+            font-size: 3em;
+        }
+
         section {
-            font-size: 48pt;
+            font-size: 5em;
         }
 
         body>div {
