--- a/samples/animation-frequency.html
+++ b/samples/animation-frequency.html
@@ -34,7 +34,7 @@
         }
 
         h1 {
-            font-size: 3em;
+            font-size: 2em;
         }
 
         section {
@@ -45,7 +45,7 @@
             display: flex;
             align-items: center;
             margin-top: 1px;
-            opacity: 0.3;
+            opacity: 0.45;
         }
 
         body>div>div {
@@ -53,7 +53,7 @@
         }
 
         .rectange {
-            background-color: black;
+            background-color: white;
             height: 16px;
             margin-right: 6px;
         }
