--- a/samples/animation-frequency.html
+++ b/samples/animation-frequency.html
@@ -1,104 +1,122 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Animation Frequency</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            color: white;
-            background-color: black;
-        }
+      body {
+        margin: 0;
+        padding: 0;
+        color: white;
+        background-color: black;
+      }
 
-        article {
-            position: fixed;
-            display: flex;
-            justify-content: center;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            flex-direction: column;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100vw;
-            height: 100vh;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+      article {
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: 100vh;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
 
-        article {
-            text-align: center;
-        }
+      article {
+        text-align: center;
+      }
 
-        h1 {
-            font-size: 2em;
-        }
+      h1 {
+        font-size: 2em;
+      }
 
-        section {
-            font-size: 5em;
-        }
+      section {
+        font-size: 5em;
+      }
 
-        body>div {
-            display: flex;
-            align-items: center;
-            margin-top: 1px;
-            opacity: 0.45;
-        }
+      body > div {
+        display: flex;
+        align-items: center;
+        margin-top: 1px;
+        opacity: 0.45;
+      }
 
-        body>div>div {
-            display: inline-block;
-        }
+      body > div > div {
+        display: inline-block;
+      }
 
-        .rectange {
-            background-color: white;
-            height: 16px;
-            margin-right: 6px;
-        }
+      .rectange {
+        background-color: white;
+        height: 16px;
+        margin-right: 6px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <article>
-        <h1>Frames per second</h1>
-        <section>0</section>
+      <h1>Frames per second</h1>
+      <section>0</section>
     </article>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"
+    ></script>
     <script>
-        let number = 0;
-        let last = 0;
-        const delta = 1000;
-        let stamps = [];
-        const element = document.querySelector('section');
-        function count() {
-            number++;
-            requestAnimationFrame(count);
-        }
+      window.dataLayer = window.dataLayer || [];
 
-        setInterval(function () {
-            if (last % 3 === 0) {
-                const div = document.createElement('div');
-                const rectange = document.createElement('div');
-                rectange.classList.add('rectange')
-                const average = stamps.length > 0 ? stamps.reduce((sum, n) => sum + n, 0) / stamps.length : 0;
-                rectange.style.width = Math.floor(average * 2) + 'px';
-                const value = document.createElement('div');
-                value.innerHTML = average;
-                div.appendChild(rectange);
-                div.appendChild(value);
-                document.body.insertBefore(div, document.body.firstElementChild)
-                stamps = [];
-            } else {
-                stamps.push(number);
-            }
-            element.innerHTML = number;
-            number = 0;
-            last = Math.floor(10 * Math.floor(Date.now() / delta)) / 10;
-        }, delta);
+      function gtag() {
+        dataLayer.push(arguments);
+      }
 
-        requestAnimationFrame(count);
+      gtag("js", new Date());
+
+      gtag("config", "UA-58031952-14");
     </script>
-</body>
 
+    <script>
+      let number = 0;
+      let last = 0;
+      const delta = 1000;
+      let stamps = [];
+      const element = document.querySelector("section");
+      function count() {
+        number++;
+        requestAnimationFrame(count);
+      }
+
+      setInterval(function () {
+        if (last % 3 === 0) {
+          const div = document.createElement("div");
+          const rectange = document.createElement("div");
+          rectange.classList.add("rectange");
+          const average =
+            stamps.length > 0
+              ? stamps.reduce((sum, n) => sum + n, 0) / stamps.length
+              : 0;
+          rectange.style.width = Math.floor(average * 2) + "px";
+          const value = document.createElement("div");
+          value.innerHTML = average;
+          div.appendChild(rectange);
+          div.appendChild(value);
+          document.body.insertBefore(div, document.body.firstElementChild);
+          stamps = [];
+        } else {
+          stamps.push(number);
+        }
+        element.innerHTML = number;
+        number = 0;
+        last = Math.floor(10 * Math.floor(Date.now() / delta)) / 10;
+      }, delta);
+
+      requestAnimationFrame(count);
+    </script>
+  </body>
 </html>
