--- a/samples/orientation.html
+++ b/samples/orientation.html
@@ -1,67 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name='viewport' content='width=device-width'/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Auto Rotate</title>
-    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled"/>
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
     <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            font-family: sans-serif;
-            font-size: 20px;
-        }
+      body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        font-family: sans-serif;
+        font-size: 20px;
+      }
 
-        #area {
-            width: 240px;
-            height: 240px;
-            background-color: black;
-            color: white;
-        }
+      #area {
+        width: 240px;
+        height: 240px;
+        background-color: black;
+        color: white;
+      }
 
-        button {
-            border: 1px solid black;
-            background-color: white;
-            width: 150px;
-            height: 24px;
-            margin-top: 8px;
-        }
+      button {
+        border: 1px solid black;
+        background-color: white;
+        width: 150px;
+        height: 24px;
+        margin-top: 8px;
+      }
     </style>
-</head>
-<body>
-<div id="area"></div>
-<div id="controls">
-    <button type="button" id="unlock">unlock</button>
-</div>
-<script>
-    function showOrientation() {
+  </head>
+  <body>
+    <div id="area"></div>
+    <div id="controls">
+      <button type="button" id="unlock">unlock</button>
+    </div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+
+      gtag("js", new Date());
+
+      gtag("config", "UA-58031952-14");
+    </script>
+
+    <script>
+      function showOrientation() {
         area.innerHTML = `Type: ${screen.orientation.type}<br/>Angle: ${screen.orientation.angle}<br/>Click to fullscreen`;
-    }
+      }
 
-    addEventListener('orientationchange', showOrientation);
-    showOrientation();
+      addEventListener("orientationchange", showOrientation);
+      showOrientation();
 
-    const orientations = [
-        'landscape',
-        'landscape-primary',
-        'landscape-secondary',
-        'portrait',
-        'portrait-primary',
-        'portrait-secondary',
-    ];
-    for(const name of orientations) {
-        const button = document.createElement('button');
+      const orientations = [
+        "landscape",
+        "landscape-primary",
+        "landscape-secondary",
+        "portrait",
+        "portrait-primary",
+        "portrait-secondary",
+      ];
+      for (const name of orientations) {
+        const button = document.createElement("button");
         button.innerHTML = name;
-        button.addEventListener('click', () => screen.orientation.lock(name));
+        button.addEventListener("click", () => screen.orientation.lock(name));
         controls.appendChild(button);
-    }
+      }
 
-    document.body.addEventListener('click', function () {
+      document.body.addEventListener("click", function () {
         document.body.requestFullscreen();
-    })
-</script>
-</body>
+      });
+    </script>
+  </body>
 </html>
