--- a/tools/url.html
+++ b/tools/url.html
@@ -15,6 +15,23 @@
     </style>
   </head>
   <body>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-58031952-14"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+
+      gtag("js", new Date());
+
+      gtag("config", "UA-58031952-14");
+    </script>
+
     <form>
       <input type="url" placeholder="URL" />
       <textarea></textarea>
