--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 <div class="value">taradox89</div>
               </div>
               <div>
-                <div class="label">Facebook</div>
-                <a href="https://www.facebook.com/kissarat" class="value"
-                  >www.facebook.com/kissarat</a
+                <div class="label">GitHub</div>
+                <a href="https://github.com/kissarat" class="value"
+                  >github.com/kissarat</a
                 >
               </div>
               <div class="tile website">
