--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </h2>
             <!--<a class="export">PDF</a>-->
             <div v-bind:class="{abstract: !large, table: large}">
-              <div class="tile age">
+              <!--div class="tile age">
                 <div class="label">Age</div>
-                <div class="value">30</div>
-              </div>
+                <div class="value">26</div>
+              </div-->
               <div class="tile">
                 <div class="label">Email</div>
                 <a itemprop="email" href="mailto:" class="value"></a>
