--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="resume/script.js"></script>
-    <script src="resume/hired.js"></script>
+    <!--script src="resume/hired.js"></script-->
     <div id="hired" style="opacity: 0; display: none">
       <h1>I am hired</h1>
       <button type="button">OK</button>
