drive.google.com

--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@
       </article>
     </div>
     <iframe src="https://en.wikipedia.org/wiki/Ethereum"></iframe>
-    <a id="pdf" href="https://grabify.link/TB2PKD" class="download" title="Save as PDF" target="_blank">
+    <a id="pdf" href="https://drive.google.com/file/d/1YOgf6okYrzCDE5AqAr8_8k5u84VDI0VR/view?usp=sharing"
+      class="download" title="Save as PDF" target="_blank">
       <img alt="Save as PDF" src="images/pdf.png" />
     </a>
   </div>
