--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               <dt class="notranslate">Auxiliary</dt>
               <dd>
                 Utilities NPM package (like lodash)
-                <a href="https://github.com/kissarat/auxiliary">https://www.npmjs.com/package/auxiliary</a>
+                <a href="https://www.npmjs.com/package/auxiliary">https://www.npmjs.com/package/auxiliary</a>
               </dd>
               <dt class="notranslate">Comparator Generator</dt>
               <dd>
