--- a/index.html
+++ b/index.html
@@ -397,9 +397,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.21/vue.min.js"
     integrity="sha256-ui3vFTgbIIvd9ePh+wF+ju05O3jympV4FyFlpNMV2cw=" crossorigin="anonymous"></script>
   <script src="resume/script.js"></script>
-  <!--script src="resume/hired.js"></script-->
+  <script src="resume/hired.js"></script>
   <div id="hired" style="opacity: 0; display: none">
-    <h1>I am hired</h1>
+    <h1>I am hired
+      <!-- by <a target="_blank" href="https://brightdata.com/">brightdata.com</a>-->
+    </h1>
     <button type="button">OK</button>
   </div>
 </body>
