--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
           </h2>
           <!--<a class="export">PDF</a>-->
           <div v-bind:class="{abstract: !large, table: large}">
-            <!--div class="tile age">
-                <div class="label">Age</div>
-                <div class="value">26</div>
-              </div-->
+            <div class="tile age">
+              <div class="label">Age</div>
+              <div class="value">32</div>
+            </div>
             <div class="tile email">
               <div class="label">Email</div>
               <a itemprop="email" href="mailto:" class="value"></a>
@@ -93,9 +93,22 @@
         <dl>
           <dt class="skills">Summary</dt>
           <dd id="skills" itemprop="description">
+            I'm a master of mind. I love to solve, to describe, to analyze, to give precise
+            estimates also I love to investigate and implement different approaches
+            and methodologies in the projects. If you prefer to have meetings with existentialism
+            I'll prefer to make transactional analysis to reduce existential questions. If you'll
+            be nice we'll enjoy together. I like to have fun but I avoid the loyal fans. Life is
+            too short to be unresposible. I'm normal genuis and I prefer to dream about pleasure
+            instead of punishment. To work with you I must know your's existential answers and I
+            will be talk only about myself untill I find out how you want to work efficiency. I
+            care about others if they understand that I'm modest genius.
+            I love buddhism, yoga, astronomy, physics, mathematics, ethics. If you guess I should
+            be polite I'll be pretty and will not to tell you about psychiatry because I hate
+            psychotherapy without a bottle.
+            We are children, but someone ought to show how much he love adult porn or how many
+            children she can born, cook and prepare for adult life.
             <ul>
-              <li class="engineering">Software Engineering</li>
-              <li><a href="https://en.wikipedia.org/wiki/PHP">PHP</a></li>
+              <li><a href="https://go.dev/">Go</a></li>
               <li class="notranslate">
                 <a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>/ES6
               </li>
